[package]
name = "rust-crud-app"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Functions
tokio = { version = "1.41.1", features = ["full"] }

# Web server
axum = "0.7.9"

# JSON Parsing
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }

#DB
sqlx = { version = "0.8.2", features = [
  "postgres",
  "macros",
  "runtime-tokio-native-tls",
] }

# dotenvy
dotenvy = "0.15.7"
